change the logic of the sorting function

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/AlexSunchozz/Megafon",
+  "homepage": "https://AlexSunchozz.github.io/Megafon",
   "name": "test-megafon",
   "version": "0.1.0",
   "private": true,
